--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -62,6 +62,12 @@
 .custom-banner{
     background: url("../../assets/images/bg/1.png") no-repeat fixed center;
 }
+.custom-banner2{
+    background: url("../../assets/images/bg/banner2.png") no-repeat center;
+}
+.custom-footer{
+    background: url("../../assets/images/bg/bg-footer.png") no-repeat center;
+}
 .custom-max-w-text-banner {
     max-width: 46rem !important;
 }
